Add buttons and arithmetic functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div>
+    <div class="boxes container">
         <div id="one" class="number-button">1</div>
         <div id="two" class="number-button">2</div>
         <div id="three" class="number-button">3</div>
