--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div id="result"></div>
     <div class="boxes container">
-        <div id="one" class="number-button">1</div>
-        <div id="two" class="number-button">2</div>
-        <div id="three" class="number-button">3</div>
-        <div id="division" class="arithmetic-button">&div;</div>
-        <div id="four" class="number-button">4</div>
-        <div id="five" class="number-button">5</div>
-        <div id="six" class="number-button">6</div>
-        <div id="multiplication" class="arithmetic-button">x</div>
-        <div id="seven" class="number-button">7</div>
-        <div id="eight" class="number-button">8</div>
-        <div id="nine" class="number-button">9</div>
-        <div id="subtraction" class="arithmetic-button">-</div>
-        <div id="zero" class="number-button">0</div>
-        <div id="addition" class="arithmetic-button">+</div>
+        <div id="one" class="button number-button">1</div>
+        <div id="two" class="button number-button">2</div>
+        <div id="three" class="button number-button">3</div>
+        <div id="division" class="button arithmetic-button">&div;</div>
+        <div id="four" class="button number-button">4</div>
+        <div id="five" class="button number-button">5</div>
+        <div id="six" class="button number-button">6</div>
+        <div id="multiplication" class="button arithmetic-button">x</div>
+        <div id="seven" class="button number-button">7</div>
+        <div id="eight" class="button number-button">8</div>
+        <div id="nine" class="button number-button">9</div>
+        <div id="subtraction" class="button arithmetic-button">-</div>
+        <div id="zero" class="button number-button">0</div>
+        <div id="addition" class="button arithmetic-button">+</div>
+        <div id="equals" class="button">=</div>
+        <div id="clear" class="button">Clear</div>
     </div>
-
     <script src="index.js"></script>
 </body>
 </html>
